project/K8s/templates/deployment.yaml
# deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exp-app
  labels:
    app: exp-app
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: exp-app
    meta.helm.sh/release-namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exp-app
  template:
    metadata:
      labels:
        app: exp-app
    spec:
      containers:
        - name: web
          image: tanees012/exp-app:latest
          ports:
            - containerPort: 3000
