project/K8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exp-app-ingress
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: exp-app
    meta.helm.sh/release-namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: exp-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exp-app-service
                port:
                  number: 3000
